<resources>

    <string name="app_name">Calculator</string>

    <string name="bracket">( )</string>
    <string name="six">6</string>
    <string name="power">^</string>
    <string name="plus">+</string>
    <string name="one">1</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="divide">÷</string>
    <string name="nine">9</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="multiply">×</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="minus">-</string>
    <string name="plusMinus">+/-</string>
    <string name="zero">0</string>
    <string name="decimal">.</string>
    <string name="equals">=</string>
    <string name="clear">C</string>
    <string name="display">Enter in a Value</string>
    <string name="erase"> </string>
    <string name="calculator">Calculator</string>
    <string name="start">Start</string>
    <string name="calculatorimagelogo">CalculatorImageLogo</string>
    <string name="todo">TODO</string>

</resources>